@@ -10,6 +10,8 @@ Revision history for Test-File-Contents
       - Added `file_contents_eq_or_diff()`.
       - Renamed `file_md5sum` to `file_md5sum_is`. The old name remains as an
         alias for backwards compatibility.
+      - Renamed `file_contents_identical` to `files_eq`. The old name remains
+        as an alias for backwards compatibility.
 
 0.10  2011-02-18
       - Maintainership taken by David E. Wheeler.
